Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [project]
 	description = Python utilities for OpenBMC Phosphor
 [access]
-	inheritFrom = openbmc-python-repos
+	inheritFrom = openbmc-deprecated-repos
 [submit]
 	action = rebase if necessary
